# apple-mail-mcp

./: .releaserc.json  .woodpecker.yml  README.md  package-lock.json  pyproject.toml  renovate.json
.claude-plugin/: marketplace.json  plugin.json
apple-mail-mcpb/: build-mcpb.sh  manifest.json
